--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/blog/" # the subpath of your site, e.g. /blog/
 url: "http://lalebot.github.io/" # the base hostname & protocol for your site
-twitter_username: alepistilli
+twitter_username: apistilli
 github_username:  lalebot
 
 # Build settings
