--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ port:    4000
 host:    127.0.0.1
 
 # Outputting
-permalink: date
+permalink: /:year/:month/:title
 paginate_path: /page:num
 
 quiet:    false
