--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Ale Blog
 email: ale@blog.com
 description: Simple Blog
-baseurl: ""
-url: "http://lalebot.github.io/blog"
+baseurl: "/blog"
+url: "http://lalebot.github.io/"
 twitter_username: alepi
 github_username: lalebot
 timezone : America/Argentina/Cordoba
@@ -49,7 +49,7 @@ host:    127.0.0.1
 # Outputting
 permalink: /:year/:month/:title
 paginate_path: /page:num
-paginate: 3
+paginate: 7
 
 quiet:    false
 defaults: []
