--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ port:    4000
 host:    127.0.0.1
 
 # Outputting
-permalink: /:year/:month/:title
+permalink: /:year/:title
 paginate_path: /page:num
 paginate: 7
 
